edited the facebook social link

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <span>&copy; COPYRIGHT BIDKINGS 2017 </span>
     <span class="uk-margin-medium-left">
         Follow US
-    <a href="https://web.facebook.com/BidKings/" uk-icon="icon: facebook" target="_blank"></a>
+    <a href="www.facebook.com/bidkings" uk-icon="icon: facebook" target="_blank"></a>
     <a href="https://twitter.com/bidkings_ng" uk-icon="icon: twitter" target="_blank"></a>
     <a href="https://www.instagram.com/bidkings_ng/" uk-icon="icon: instagram" target="_blank"></a>
 </footer>
