--- a/index.html
+++ b/index.html
@@ -17,21 +17,17 @@
     <div class="uk-container uk-container-small uk-text-center">
         <img src="img/logoHorz.png" class="logo" alt="">
         <h4 class="message">OFFICIAL LAUNCH | <span class="date">DEC. 1, 2017</span></h4>
-        <div class="main-example">
-            <div class="countdown-container" id="main-example"></div>
-        </div>
-        <script type="text/template" id="main-example-template">
-            <div class="time <%= label %>"> <span class="count curr top"><%= curr %></span> <span class="count next top"><%= next %></span> <span class="count next bottom"><%= next %></span> <span class="count curr bottom"><%= curr %></span> <span class="label"><%= label.length < 6 ? label : label.substr(0, 3)  %></span> </div>
-        </script>
+        <div id='flip_timer'></div>
         <div class="uk-child-width-1-4@m uk-child-width-1-3 uk-margin-large-bottom uk-margin-medium-top uk-grid-small uk-grid-match" uk-grid>
             <div class="parent">
-                <a  href="#modal-full" uk-toggle>
+
                     <div class="uk-card uk-card-default">
                     <div class="uk-card-header uk-section-muted">
+                        <!--<a href="#bid1" uk-toggle uk-icon="icon: info" title="click for Info" uk-tooltip></a>-->
                         <h4 class="purp">Iphone X</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="img/P1/iphone-x-thumb.png" alt="">
@@ -52,7 +48,6 @@
                         <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW</button>
                     </div>
                 </div>
-                </a>
             </div>
             <div class="parent">
                 <div class="uk-card uk-card-default">
@@ -60,7 +55,7 @@
                         <h4 class="purp">Samsung TV</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="img/P2/5773800_rd.jpg" alt="">
@@ -88,7 +83,7 @@
                         <h4 class="purp">Samsung Note 8</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558638/products/P3/6002605_sd.jpg" alt="">
@@ -116,7 +111,7 @@
                         <h4 class="purp">Kia Picanto</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="img/P4/KIA-Picanto.png" alt="">
@@ -139,12 +134,14 @@
                 </div>
             </div>
             <div class="parent">
-                <div class="uk-card uk-card-default">
+
+                    <div class="uk-card uk-card-default">
                     <div class="uk-card-header uk-section-muted">
+                        <!--<a href="#bid1" uk-toggle uk-icon="icon: info" title="click for Info" uk-tooltip></a>-->
                         <h4 class="purp">Iphone X</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="img/P1/iphone-x-thumb.png" alt="">
@@ -172,7 +169,7 @@
                         <h4 class="purp">Cuisinart</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510748883/products/p6/cousinart.jpg" alt="">
@@ -200,7 +197,7 @@
                         <h4 class="purp">Honeywell Fan</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/c_scale,h_522,w_522/v1510748883/products/p6/honeywell_fan.png" alt="">
@@ -228,7 +225,7 @@
                         <h4 class="purp">Apple Ipad 9.7</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="min-height: 185; max-height: 200; animation: fade">
+                        <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510748882/products/p6/ipad9.7.jpg" alt="">
@@ -257,18 +254,11 @@
     <span>&copy; COPYRIGHT BIDKINGS 2017 </span>
     <span class="uk-margin-medium-left">
         Follow US
-    <a href="www.facebook.com/bidkings" uk-icon="icon: facebook" target="_blank"></a>
+    <a href="https://facebook.com/bidkings" uk-icon="icon: facebook" target="_blank"></a>
     <a href="https://twitter.com/bidkings_ng" uk-icon="icon: twitter" target="_blank"></a>
     <a href="https://www.instagram.com/bidkings_ng/" uk-icon="icon: instagram" target="_blank"></a>
 </footer>
-<div id="modal-full" class="<a href="#modal" data-uk-modal=""></a>
-<div id="modal" class="uk-modal">
-    <div class="uk-modal-dialog">
-        <a href="" class="uk-modal-close uk-close"></a>
-        <p></p>
-    </div>
-</div>
-" uk-modal>
+<div id="modal-full" class="<a href="#modal" uk-modal>
     <div class="uk-modal-dialog">
         <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
         <div>
