fixed exclamation marks

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p bid-ctrl="b1" count="00:00:25" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">Adabeke89</p>
-                        <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                         <p bid-ctrl="b2" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">King_Buchi1</p>
-                        <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <p bid-ctrl="b3" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">Kaka7625</p>
-                        <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <p bid-ctrl="b4" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">Bidmaster247</p>
-                        <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                         <p bid-ctrl="b1" count="00:00:25" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">Adabeke89</p>
-                        <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                         <p bid-ctrl="b2" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">Toni2weeks</p>
-                        <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                         <p bid-ctrl="b3" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">VickyO</p>
-                        <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                         <p bid-ctrl="b4" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
                         <p class="bidder uk-margin-remove">LovelyLauretta</p>
-                        <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW</button>
+                        <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
             </div>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Iphone X</h3>
-                    <button class="uk-button uk-button uk-button-default bidBtn">Bid Now</button>
+                    <button class="uk-button uk-button uk-button-default bidBtn">Bid Now!</button>
                 </div>
             </div>
             </div>
