--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <!--suppress ALL -->
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37638687-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-37638687-5');
+    </script>
+
     <meta charset="UTF-8">
     <title>Bidkings</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
