--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
-                                    <img src="img/P1/iphone-x-thumb.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558534/products/P1/iphone-x-thumb.png" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P1/iphone-x-02.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558532/products/P1/iphone-x-02.png" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P1/iphone-x-03.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558530/products/P1/iphone-x-03.png" alt="">
                                 </li>
                             </ul>
                             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
@@ -68,20 +68,20 @@
                         <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
-                                    <img src="img/P2/5773800_rd.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558594/products/P2/5773800_rd.jpg" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P2/5773800_bd.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558590/products/P2/5773800_bd.jpg" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P2/5773800_sd.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558590/products/P2/5773800_sd.jpg" alt="">
                                 </li>
                             </ul>
                             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b2" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;195.00</p>
                         <p class="bidder uk-margin-remove">King_Buchi1</p>
                         <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -109,7 +109,7 @@
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b3" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;250.42</p>
                         <p class="bidder uk-margin-remove">Kaka7625</p>
                         <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -124,20 +124,23 @@
                         <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
-                                    <img src="img/P4/KIA-Picanto.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/c_scale,w_257/v1510558670/products/P4/KIA-Picanto.png" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P4/img_exterior2.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/c_scale,w_253/v1510861683/products/P4/Kia-picanto-gallery-interior-detail1.jpg" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P4/img_exterior3.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/c_scale,w_341/v1510861685/products/P4/Kia-picanto-gallery-interior-detail5.jpg" alt="">
+                                </li>
+                                <li>
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/c_scale,w_246/v1510861684/products/P4/Kia-picanto-gallery-interior-detail6.jpg" alt="">
                                 </li>
                             </ul>
                             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b4" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;1965.01</p>
                         <p class="bidder uk-margin-remove">Bidmaster247</p>
                         <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -148,26 +151,26 @@
                     <div class="uk-card uk-card-default">
                     <div class="uk-card-header uk-section-muted">
                         <!--<a href="#bid1" uk-toggle uk-icon="icon: info" title="click for Info" uk-tooltip></a>-->
-                        <h4 class="purp">Iphone X</h4>
+                        <h4 class="purp">Bose Soundlink</h4>
                     </div>
                     <div class="uk-card-body cardbod uk-padding-remove">
                         <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow-parallax="x: 100,0,0; opacity: 1,1,0" uk-slideshow="autoplay-interval: 4000; autoplay: true; min-height: 185; max-height: 200; animation: fade">
                             <ul class="uk-slideshow-items">
                                 <li>
-                                    <img src="img/P1/iphone-x-thumb.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558728/products/P5/musicbox.jpg" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P1/iphone-x-02.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558728/products/P5/musicbox-01.jpg" alt="">
                                 </li>
                                 <li>
-                                    <img src="img/P1/iphone-x-03.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558729/products/P5/musicbox-02.jpg" alt="">
                                 </li>
                             </ul>
                             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b1" count="00:00:25" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;15.20</p>
                         <p class="bidder uk-margin-remove">Adabeke89</p>
                         <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -195,7 +198,7 @@
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b2" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;10.50</p>
                         <p class="bidder uk-margin-remove">Toni2weeks</p>
                         <button bid-ctrl="b2" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -223,7 +226,7 @@
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b3" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;1.26</p>
                         <p class="bidder uk-margin-remove">VickyO</p>
                         <button bid-ctrl="b3" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
@@ -251,7 +254,7 @@
                             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                         </div>
                         <p bid-ctrl="b4" count="00:00:15" class="countdown uk-margin-remove">00:00:00</p>
-                        <p class="bidPrice uk-margin-remove">&#8358;356.49</p>
+                        <p class="bidPrice uk-margin-remove">&#8358;42.38</p>
                         <p class="bidder uk-margin-remove">LovelyLauretta</p>
                         <button bid-ctrl="b4" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
