cropped image and reset username

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558534/products/P1/iphone-x-thumb.png" alt="">
                                 </li>
                                 <li>
-                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558532/products/P1/iphone-x-02.png" alt="">
+                                    <img src="http://res.cloudinary.com/ayobuba/image/upload/c_crop,h_349/v1510907896/products/P1/iphone-x-02.png" alt="">
                                 </li>
                                 <li>
                                     <img src="http://res.cloudinary.com/ayobuba/image/upload/v1510558530/products/P1/iphone-x-03.png" alt="">
@@ -171,7 +171,7 @@
                         </div>
                         <p bid-ctrl="b1" count="00:00:25" class="countdown uk-margin-remove">00:00:00</p>
                         <p class="bidPrice uk-margin-remove">&#8358;15.20</p>
-                        <p class="bidder uk-margin-remove">Adabeke89</p>
+                        <p class="bidder uk-margin-remove">robertrisk</p>
                         <button bid-ctrl="b1" class="uk-button uk-button-default bidBtn">BID NOW!</button>
                     </div>
                 </div>
